@@ -121,6 +121,7 @@ efreet_icon_shutdown(void)
     efreet_extra_icon_dirs = eina_list_free(efreet_extra_icon_dirs);
 
     eina_log_domain_unregister(_efreet_icon_log_dom);
+    _efreet_icon_log_dom = -1;
     IF_FREE_HASH(change_monitors);
 }
 
